<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="logo_name">CN2- Audio Recorder</string>
    
<!-- Main Screen Layout  -->    
    
    <string name="heading_bar">CN2 - Audio Recorder</string>
    <string name="info_display">\nPress \"Record\" to start Recording, \"Stop(Save)\" to Stop and Save your Recording</string>
           
<!-- Strings for Audio Record START - STOP buttons -->    
	<string name="start_recording">Record</string>
    <string name="stopsave_recording">Stop\n(Save)</string>
          
 <!-- Strings for the Dialog Boxes that allows to choose Sampling Rates -->   
    <string name="sampling_rate_default">Sampling Rates \n[8kHz (CD)]</string>
    <string name="sampling_rate">Sampling Rate\n</string>
    <string name="select_sample_rates">Select Sampling Rate</string>
    
  	<string name="explore_recordings">Explore Recordings</string> 	 
    <string name="play_last_recording">Play Last Recording</string>
     
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
