<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical"
    android:padding="20dip"
   	android:background="@drawable/bg12">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:src="@drawable/rasbg" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />
   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_display"
        android:textColor="#169"
        android:textSize="12sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnSampleRates"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:text="@string/sampling_rate_default" />
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.80"
        android:drawableLeft="@drawable/ic_bg"
        android:text="@string/start_recording" />
            
    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.00"
        android:text="@string/stopsave_recording" 
        
        android:drawableLeft="@drawable/save"/>
        
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
    <Button
        android:id="@+id/btnPlayLastRecord"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:drawableLeft="@drawable/ras_play"
        android:text="@string/play_last_recording" />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnExplore"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:drawableLeft="@drawable/explore"
        android:text="@string/explore_recordings" />
        
    </LinearLayout>

</LinearLayout>